postgresql/pgadmin.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
    field.cattle.io/creatorId: user-5dn6d
    field.cattle.io/publicEndpoints: '[{"addresses":["51.77.136.161"],"port":443,"protocol":"HTTPS","serviceName":"postgresql:ingress-81931ae776e2213a9b9219e857ff6107","ingressName":"postgresql:pgadmin","hostname":"pgadmin.blueforest.org","allNodes":true}]'
  labels:
    cattle.io/creator: norman
    workload.user.cattle.io/workloadselector: deployment-postgresql-pgadmin
  name: pgadmin
  namespace: postgresql
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-postgresql-pgadmin
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: '2019-06-01T10:30:33Z'
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: deployment-postgresql-pgadmin
    spec:
      containers:
      - env:
        - name: PGADMIN_DEFAULT_EMAIL
          value: smedini@gmail.com
        - name: PGADMIN_DEFAULT_PASSWORD
          value: m74KJzvUU3
        image: dpage/pgadmin4
        imagePullPolicy: Always
        name: pgadmin
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
